made adjustment to strip src function

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   
 
       <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,800&display=swap" rel="stylesheet">
+      <script src="https://kit.fontawesome.com/cb4a49062c.js" crossorigin="anonymous"></script>
 
 </head>
 
