--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0b575b">
   <meta name="msapplication-TileColor" content="#0b575b">
   <meta name="theme-color" content="#0b575b">
+
+  <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
  
 
   <!--
